filters on the homepage and login page
added style to filters on the homepage and created the login page (no js yet)

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -17,8 +17,8 @@
 	<nav>
 		<ul>
 			<li>projets</li>
-			<li>contact</li>
-			<li>login</li>
+			<a href="#contact"><li>contact</li></a>
+			<a href="login.html"><li>login</li></a>
 			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
 	</nav>
