--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -15,14 +15,16 @@
 <header>
 	<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
 	<nav>
-		<ul>
-			<li>projets</li>
+		<ul> <a href="#portfolio"><li>projets</li></a>
 			<a href="#contact"><li>contact</li></a>
-			<a href="login.html"><li>login</li></a>
-			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
+			<a href="login.html"><li>login</li></a> 
+			<a href="https://instagram.com" target="_blank">
+				<li><img src="./assets/icons/instagram.png" class="insta-logo" alt="Instagram"></li>
+			</a>
 		</ul>
 	</nav>
 </header>
+
 <main>
 	<section id="introduction">
 		<figure>
