--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -9,32 +9,38 @@
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
-	<script src="" defer></script>
+	<script src="login.js" defer></script>
 </head>
 <body>
 <header>
-    <a href="index.html">
-        <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
-    </a>
+	<a href="index.html"><h1>Sophie Bluel <span>Architecte d'intérieur</span></h1></a>
 	<nav>
-		<ul>
-			<li>projets</li>
+		<ul> <a href="index.html#portfolio"><li>projets</li></a>
 			<a href="index.html#contact"><li>contact</li></a>
-			<a href="login.html"><li>login</li></a>
-			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
+			<a href="login.html"><li>login</li></a> 
+			<a href="https://instagram.com" target="_blank">
+				<li><img src="./assets/icons/instagram.png" class="insta-logo" alt="Instagram"></li>
+			</a>
 		</ul>
 	</nav>
 </header>
-
 
 <h2 class="login-title">Log In</h2>
 <div class="login-form-container">
     <form action="" method="get" class="login-form">
         <label for="mail">E-mail</label>
-        <input type="email" id="mail" name="user_mail">
+        <input type="email" id="mail" name="user_mail" required>
         <label for="password">Mot de passe</label>
-        <input type="text" id="password" name="user_password">
+        <input type="password" id="password" name="user_password" required>
+		<button type="submit" class="btn-submit">Se connecter</button>
     </form>
-    <button type="submit" class="btn-submit">Se connecter</button>
     <span class="forgotten-pw">Mot de passe oublié</span>
 </div>
+
+<footer>
+	<nav>
+		<ul>
+			<li>Mentions Légales</li>
+		</ul>
+	</nav>
+</footer>
