--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -38,7 +38,24 @@
 		</article>
 	</section>
 	<section id="portfolio">
-		<h2>Mes Projets</h2>
+		<div class="projects-header">
+			<h2>Mes projets</h2>
+			<div class="edit-project" id="edit-btn">
+				<img src="assets/icons/modifier.png" alt="modifier">
+				<span>Modifier</span>
+			</div>
+		</div>
+		<div>
+			<div class="modal-gallery modal-hidden">
+				<img class="close-btn" src="assets/icons/close.png" alt="fermer la fenetre">
+				<h4 class="modal-title">Galerie photo</h4>
+				<div class="projects-container">
+	
+				</div>
+				<div class="line-separator"></div>
+				<button class="btn-modal">Ajouter une photo</button>
+			</div>
+		</div>
 		<div class="btns-container">
 			
 		</div>
