--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -12,78 +12,81 @@
 	<script src="index.js" defer></script>
 </head>
 <body>
-<header>
-	<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
-	<nav>
-		<ul> <a href="#portfolio"><li>projets</li></a>
-			<a href="#contact"><li>contact</li></a>
-			<a href="login.html"><li>login</li></a> 
-			<a href="https://instagram.com" target="_blank">
-				<li><img src="./assets/icons/instagram.png" class="insta-logo" alt="Instagram"></li>
-			</a>
-		</ul>
-	</nav>
-</header>
-
-<main>
-	<section id="introduction">
-		<figure>
-			<img src="./assets/images/sophie-bluel.png" alt="">
-		</figure>
-		<article>
-			<h2>Designer d'espace</h2>
-			<p>Je raconte votre histoire, je valorise vos idées. Je vous accompagne de la conception à la livraison finale du chantier.</p>
-			<p>Chaque projet sera étudié en commun, de façon à mettre en valeur les volumes, les matières et les couleurs dans le respect de l’esprit des lieux et le choix adapté des matériaux. Le suivi du chantier sera assuré dans le souci du détail, le respect du planning et du budget.</p>
-			<p>En cas de besoin, une équipe pluridisciplinaire peut-être constituée : architecte DPLG, décorateur(trice)</p>
-		</article>
-	</section>
-	<section id="portfolio">
-		<div class="projects-header">
-			<h2>Mes projets</h2>
-			<div class="edit-project" id="edit-btn">
-				<img src="assets/icons/modifier.png" alt="modifier">
-				<span>Modifier</span>
-			</div>
-		</div>
-		<div>
-			<div class="modal-gallery modal-hidden">
-				<img class="close-btn" src="assets/icons/close.png" alt="fermer la fenetre">
-				<h4 class="modal-title">Galerie photo</h4>
-				<div class="projects-container">
-	
+	<div class="overlay">
+		<header>
+			<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
+			<nav>
+				<ul> <a href="#portfolio"><li>projets</li></a>
+					<a href="#contact"><li>contact</li></a>
+					<a href="login.html"><li>login</li></a> 
+					<a href="https://instagram.com" target="_blank">
+						<li><img src="./assets/icons/instagram.png" class="insta-logo" alt="Instagram"></li>
+					</a>
+				</ul>
+			</nav>
+		</header>
+		
+		<main>
+			<section id="introduction">
+				<figure>
+					<img src="./assets/images/sophie-bluel.png" alt="">
+				</figure>
+				<article>
+					<h2>Designer d'espace</h2>
+					<p>Je raconte votre histoire, je valorise vos idées. Je vous accompagne de la conception à la livraison finale du chantier.</p>
+					<p>Chaque projet sera étudié en commun, de façon à mettre en valeur les volumes, les matières et les couleurs dans le respect de l’esprit des lieux et le choix adapté des matériaux. Le suivi du chantier sera assuré dans le souci du détail, le respect du planning et du budget.</p>
+					<p>En cas de besoin, une équipe pluridisciplinaire peut-être constituée : architecte DPLG, décorateur(trice)</p>
+				</article>
+			</section>
+			<section id="portfolio">
+				<div class="projects-header">
+					<h2>Mes projets</h2>
+					<div class="edit-project" id="edit-btn">
+						<img src="assets/icons/modifier.png" alt="modifier">
+						<span>Modifier</span>
+					</div>
 				</div>
-				<div class="line-separator"></div>
-				<button class="btn-modal">Ajouter une photo</button>
-			</div>
-		</div>
-		<div class="btns-container">
+				<div>
+					<div class="modal-gallery modal-hidden">
+						<img class="close-btn" src="assets/icons/close.png" alt="fermer la fenetre">
+						<h4 class="modal-title">Galerie photo</h4>
+						<div class="projects-container">
 			
-		</div>
-		<div class="gallery">
+						</div>
+						<div class="line-separator"></div>
+						<button class="btn-modal">Ajouter une photo</button>
+					</div>
+				</div>
+				<div class="btns-container">
+					
+				</div>
+				<div class="gallery">
+		
+				</div>
+			</section>
+			<section id="contact">
+				<h2>Contact</h2>
+				<p>Vous avez un projet ? Discutons-en !</p>
+				<form action="#" method="post">
+					<label for="name">Nom</label>
+					<input type="text" name="name" id="name">
+					<label for="email">Email</label>
+					<input type="email" name="email" id="email">
+					<label for="message">Message</label>
+					<textarea name="message" id="message" cols="30" rows="10"></textarea>
+					<input type="submit" value="Envoyer">
+				</form>
+			</section>
+		</main>
+		
+		<footer>
+			<nav>
+				<ul>
+					<li>Mentions Légales</li>
+				</ul>
+			</nav>
+		</footer>
+	</div>
+		</body>
+		</html>
 
-		</div>
-	</section>
-	<section id="contact">
-		<h2>Contact</h2>
-		<p>Vous avez un projet ? Discutons-en !</p>
-		<form action="#" method="post">
-			<label for="name">Nom</label>
-			<input type="text" name="name" id="name">
-			<label for="email">Email</label>
-			<input type="email" name="email" id="email">
-			<label for="message">Message</label>
-			<textarea name="message" id="message" cols="30" rows="10"></textarea>
-			<input type="submit" value="Envoyer">
-		</form>
-	</section>
-</main>
-
-<footer>
-	<nav>
-		<ul>
-			<li>Mentions Légales</li>
-		</ul>
-	</nav>
-</footer>
-</body>
-</html>
