--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -8,8 +8,9 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
-	<link rel="stylesheet" href="./assets/style.css">
-	<script src="index.js" defer></script>
+	<link rel="stylesheet" href="./assets/css/style.css">
+	<link rel="stylesheet" href="./assets/css/modales.css">
+	<script src="assets/scripts/index.js" defer></script>
 </head>
 <body id="overlay-container">
 	<header>
@@ -17,7 +18,7 @@
 		<nav>
 			<ul> <a href="#portfolio"><li>projets</li></a>
 				<a href="#contact"><li>contact</li></a>
-				<a href="login.html"><li>login</li></a> 
+				<a href="login.html" id="login-txt"><li>login</li></a> 
 				<a href="https://instagram.com" target="_blank">
 					<li><img src="./assets/icons/instagram.png" class="insta-logo" alt="Instagram"></li>
 				</a>
@@ -49,11 +50,23 @@
 			<div class="modal-gallery modal-hidden">
 				<img class="close-btn" src="assets/icons/close.png" alt="fermer la fenetre">
 				<h4 class="modal-title">Galerie photo</h4>
-				<div class="projects-container">
-					
+				<div class="modal-hidden" id="addWorkModal">
+					<img src="assets/icons/arrow-left.png" alt="Précédent" class="back-btn">
+					<div class="photo-wrapper">
+						<img src="assets/icons/new_photo.png" alt="Nouvelle image" class="photo-icon">
+						<button class="add-photo-btn">+ Ajouter photo</button>
+						<span class="photo-infos">jpg, png : 4mo max</span>
+					</div>
+					<form class="add-work-form">
+						<label for="title">Titre</label>
+						<input type="text" id="title" name="title" class="add-work-input" required/>
+						<label for="category">Catégorie</label>
+						<select name="category" id="category" class="add-work-input" required></select>
+					</form>
 				</div>
+				<div class="projects-container"></div>
 				<div class="line-separator"></div>
-				<button class="btn-modal">Ajouter une photo</button>
+				<button class="btn-modal" id="addWork">Ajouter une photo</button>
 			</div>
 			<div class="btns-container">
 				
