--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -8,8 +8,9 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
-	<link rel="stylesheet" href="./assets/style.css">
-	<script src="login.js" defer></script>
+	<link rel="stylesheet" href="./assets/css/style.css">
+	<link rel="stylesheet" href="./assets/css/login.css">
+	<script src="assets/scripts/login.js" defer></script>
 </head>
 <body>
 <header>
@@ -17,7 +18,7 @@
 	<nav>
 		<ul> <a href="index.html#portfolio"><li>projets</li></a>
 			<a href="index.html#contact"><li>contact</li></a>
-			<a href="login.html"><li>login</li></a> 
+			<a href="login.html" id="login-txt"><li>login</li></a> 
 			<a href="https://instagram.com" target="_blank">
 				<li><img src="./assets/icons/instagram.png" class="insta-logo" alt="Instagram"></li>
 			</a>
