admin can now post new work
fonctionnal form to add a new work in the database
the new work is displayed in the gallery

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -69,6 +69,7 @@
 				<div class="projects-container"></div>
 				<div class="line-separator"></div>
 				<button class="btn-modal" id="addWork">Ajouter une photo</button>
+				<button type="submit" class="btn-modal validation-btn modal-hidden" id="sendWorkBtn">Valider</button>
 			</div>
 			<div class="btns-container">
 				
