--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -13,22 +13,23 @@
 	<script src="assets/scripts/login.js" defer></script>
 </head>
 <body>
-<header>
-	<a href="index.html"><h1>Sophie Bluel <span>Architecte d'intérieur</span></h1></a>
-	<nav>
-		<ul> <a href="index.html#portfolio"><li>projets</li></a>
-			<a href="index.html#contact"><li>contact</li></a>
-			<a href="login.html" id="login-txt"><li>login</li></a> 
+	<header>
+		<a href="index.html">
+			<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
+		</a>
+		<nav>
+			<a href="index.html#portfolio">projets</a>
+			<a href="index.html#contact">contact</a>
+			<a href="login.html" id="login-txt">login</a> 
 			<a href="https://instagram.com" target="_blank">
-				<li><img src="./assets/icons/instagram.png" class="insta-logo" alt="Instagram"></li>
+				<img src="./assets/icons/instagram.png" class="insta-logo" alt="Instagram">
 			</a>
-		</ul>
-	</nav>
-</header>
+		</nav>
+	</header>
 
 <h2 class="login-title">Log In</h2>
 <div class="login-form-container">
-    <form action="" method="get" class="login-form">
+    <form method="get" class="login-form">
         <label for="mail">E-mail</label>
         <input type="email" id="mail" name="user_mail" required>
         <label for="password">Mot de passe</label>
