hide the edit btn if not admin

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -41,7 +41,7 @@
 		<section id="portfolio">
 			<div class="projects-header">
 				<h2>Mes projets</h2>
-				<div class="edit-project" id="edit-btn">
+				<div class="edit-project modal-hidden" id="edit-btn">
 					<img src="assets/icons/modifier.png" alt="modifier">
 					<span>Modifier</span>
 				</div>
@@ -59,9 +59,9 @@
 						<span class="photo-infos">jpg, png : 4mo max</span>
 					</div>
 					<form class="add-work-form">
-						<label for="NewWorkTitle">Titre</label>
+						<label for="newWorkTitle">Titre</label>
 						<input type="text" id="newWorkTitle" name="title" class="add-work-input" required/>
-						<label for="NewWorkCategory">Catégorie</label>
+						<label for="newWorkCategory">Catégorie</label>
 						<select name="category" id="newWorkCategory" class="add-work-input"></select>
 					</form>
 				</div>
