--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -10,16 +10,16 @@
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/css/style.css">
 	<link rel="stylesheet" href="./assets/css/login.css">
-	<script src="assets/scripts/login.js" defer></script>
+	<script src="./assets/scripts/login.js" defer></script>
 </head>
 <body>
 	<header>
-		<a href="index.html">
+		<a href="../index.html">
 			<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
 		</a>
 		<nav>
-			<a href="index.html#portfolio">projets</a>
-			<a href="index.html#contact">contact</a>
+			<a href="../index.html#portfolio">projets</a>
+			<a href="../index.html#contact">contact</a>
 			<a href="login.html" id="login-txt">login</a> 
 			<a href="https://instagram.com" target="_blank">
 				<img src="./assets/icons/instagram.png" class="insta-logo" alt="Instagram">
