--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
-	<link rel="stylesheet" href="./assets/css/style.css">
-	<link rel="stylesheet" href="./assets/css/modales.css">
-	<script src="assets/scripts/index.js" defer></script>
+	<link rel="stylesheet" href="FrontEnd/assets/css/style.css">
+	<link rel="stylesheet" href="FrontEnd/assets/css/modales.css">
+	<script src="FrontEnd/assets/scripts/index.js" defer></script>
 </head>
 <body>
 	<header>
@@ -18,9 +18,9 @@
 		<nav>
 			<a href="#portfolio">projets</a>
 			<a href="#contact">contact</a>
-			<a href="login.html" id="login-txt">login</a> 
+			<a href="FrontEnd/login.html" id="login-txt">login</a> 
 			<a href="https://instagram.com" target="_blank">
-				<img src="./assets/icons/instagram.png" class="insta-logo" alt="Instagram">
+				<img src="FrontEnd/assets/icons/instagram.png" class="insta-logo" alt="Instagram">
 			</a>
 		</nav>
 	</header>
@@ -28,7 +28,7 @@
 	<main>
 		<section id="introduction">
 			<figure>
-				<img src="./assets/images/sophie-bluel.png" alt="">
+				<img src="FrontEnd/assets/images/sophie-bluel.png" alt="">
 			</figure>
 			<article>
 				<h2>Designer d'espace</h2>
@@ -42,17 +42,17 @@
 			<div class="projects-header">
 				<h2>Mes projets</h2>
 				<div class="edit-project modal-hidden" id="edit-btn">
-					<img src="assets/icons/modifier.png" alt="modifier">
+					<img src="FrontEnd/assets/icons/modifier.png" alt="modifier">
 					<span>Modifier</span>
 				</div>
 			</div>
 			<div class="modal-gallery modal-hidden">
-				<img class="close-btn" src="assets/icons/close.png" alt="fermer la fenetre">
+				<img class="close-btn" src="Frontend/assets/icons/close.png" alt="fermer la fenetre">
 				<h4 class="modal-title">Galerie photo</h4>
 				<div class="modal-hidden" id="addWorkModal">
-					<img src="assets/icons/arrow-left.png" alt="Précédent" class="back-btn">
+					<img src="Frontend/assets/icons/arrow-left.png" alt="Précédent" class="back-btn">
 					<div class="photo-wrapper">
-						<img src="assets/icons/new_photo.png" alt="Nouvelle image" class="photo-icon">
+						<img src="Frontend/assets/icons/new_photo.png" alt="Nouvelle image" class="photo-icon">
 						<img src="" alt="work image preview" class="img-preview modal-hidden">
 						<input type="file" id="imgUpload" accept="image/png, image/jpeg" class="img-input">
 						<button class="add-photo-btn">+ Ajouter photo</button>
